# rag_backend

./: .gitignore  .terraform.lock.hcl  .terraform.tfstate.lock.info  Dockerfile  README.md  deploy.sh  deploy.yml  docker-compose.yml  inventory.ini  main.tf  rag_backend.pem  requirements.txt  site.yml  start.sh  terraform.tfstate  terraform.tfvars  variables.tf
.circleci/: config.yml
app/: .gitignore  README.md  app2.py  config.py  pyproject.toml  routes.py  stream_routes.py  vector_store.py
app/MLOps/: dataset_logger.py  train.py
app/chat/: history.py  service.py  utils.py
app/rag/: __init__.py  handler.py  rag_graph.py
app/rag/retrieval/: reranker.py  retriever.py
app/rag/search/: bm25.py  hybrid.py  vector.py
app/rag/utils/: cache.py  context.py  preprocessing.py
app/storage/: minio_client.py  setup_qdrant.py
