[project]
name = "api-rag-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "fastembed==0.3.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-qdrant==0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.5.4",
    "langsmith>=0.1.17,<0.2.0",
    "minio>=7.2.16",
    "mlflow>=3.4.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas==2.2.2",
    "pdfplumber>=0.11.7",
    "pypdf>=6.0.0",
    "python-dotenv==1.0.1",
    "qdrant-client==1.15.1",
    "rank-bm25>=0.2.2",
    "redis>=6.4.0",
    "requests==2.32.3",
    "sentence-transformers==3.0.1",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
    "tqdm==4.66.4",
    "uvicorn[standard]==0.30.1",
]
